--- a/src/views/Post/style.scss
+++ b/src/views/Post/style.scss
@@ -45,6 +45,10 @@
           max-width: 100%;
           height: auto;
         }
+
+        div {
+          max-width: 100%;
+        }
       }
     }
     /* ICON */
